force-app/main/default/objects/OS_Candidate_Address__c/OS_Candidate_Address__c.object-meta.xml
<CustomObject>
    <description>Custom object to record OS candidate addresses that have been checked against the OS API  for a funding award</description>
    <label>OS Candidate Address</label>
    <nameField>
        <displayFormat>OSCA-{0000000}</displayFormat>
        <label>OS Candidate Address Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OS Candidate Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>