force-app/main/default/objects/OS_Candidate_Address__c/fields/ABS_Batch__c.field-meta.xml
<CustomField>
    <fullName>ABS_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABS Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>OS Candidate Addresses</relationshipLabel>
    <relationshipName>OS_Candidate_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>