force-app/main/default/objects/OS_Candidate_Address__c/fields/Address_Search_String__c.field-meta.xml
<CustomField>
    <fullName>Address_Search_String__c</fullName>
    <description>The full address line supplied.</description>
    <label>Address Search String</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>