force-app/main/default/objects/OS_Candidate_Address__c/fields/API_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Call_Status__c</fullName>
    <label>API Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>