force-app/main/default/objects/OS_Candidate_Address__c/fields/Application_Region__c.field-meta.xml
<CustomField>
    <fullName>Application_Region__c</fullName>
    <formula>TEXT(Parent_Funding_Award__r.Application__r.Region__c)</formula>
    <label>Application Region</label>
    <type>Text</type>
</CustomField>