force-app/main/default/objects/OS_Candidate_Address__c/fields/Award_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Award_Name_Text__c</fullName>
    <formula>Parent_Funding_Award__r.Name</formula>
    <label>Award Name Text</label>
    <type>Text</type>
</CustomField>