force-app/main/default/objects/OS_Candidate_Address__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>OS Candidate Addresses</relationshipLabel>
    <relationshipName>OS_Candidate_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>