force-app/main/default/objects/OS_Candidate_Address__c/fields/Batch_Reference__c.field-meta.xml
<CustomField>
    <fullName>Batch_Reference__c</fullName>
    <description>Formula Derived field that captures a an identifier for the batch of records</description>
    <label>Batch Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>