force-app/main/default/objects/OS_Candidate_Address__c/fields/CO2_Emissions_Current_EPC__c.field-meta.xml
<CustomField>
    <fullName>CO2_Emissions_Current_EPC__c</fullName>
    <label>CO2 Emissions Current (EPC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>