force-app/main/default/objects/OS_Candidate_Address__c/fields/Current_EPC_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_EPC_Rating__c</fullName>
    <label>Current EPC Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>