force-app/main/default/objects/OS_Candidate_Address__c/fields/Heating_Cost_Potential_EPC__c.field-meta.xml
<CustomField>
    <fullName>Heating_Cost_Potential_EPC__c</fullName>
    <label>Heating Cost Potential (EPC)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>