force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Address__c.field-meta.xml
<CustomField>
    <fullName>OS_Address__c</fullName>
    <label>OS Full Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>