force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>OS_Building_Name__c</fullName>
    <label>OS Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>