force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>OS_Building_Number__c</fullName>
    <label>OS Building Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>