force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>OS_Classification_Code__c</fullName>
    <label>OS Classification Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>