force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Classification_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>OS_Classification_Code_Description__c</fullName>
    <label>OS Classification Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>