force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Dependent_Thoroughfare__c.field-meta.xml
<CustomField>
    <fullName>OS_Dependent_Thoroughfare__c</fullName>
    <label>OS Dependent Thoroughfare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>