force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_JSON_Response__c.field-meta.xml
<CustomField>
    <fullName>OS_JSON_Response__c</fullName>
    <description>The sull response from the OS Address Search</description>
    <label>OS JSON Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>