force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Local_Custodian_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>OS_Local_Custodian_Code_Description__c</fullName>
    <label>OS Local Custodian Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>