force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Locality__c.field-meta.xml
<CustomField>
    <fullName>OS_Locality__c</fullName>
    <label>OS Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>