force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Match_Result__c.field-meta.xml
<CustomField>
    <fullName>OS_Match_Result__c</fullName>
    <description>The match result for the best matched address</description>
    <inlineHelpText>The match result for the best matched address</inlineHelpText>
    <label>OS Match Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXACT</fullName>
            </value>
            <value>
                <fullName>GOOD</fullName>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
            </value>
            <value>
                <fullName>NO MATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>