force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Post_Town__c.field-meta.xml
<CustomField>
    <fullName>OS_Post_Town__c</fullName>
    <label>OS Post Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>