force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Postcode__c.field-meta.xml
<CustomField>
    <fullName>OS_Postcode__c</fullName>
    <label>OS Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>