force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Search_Completed_Datetime__c.field-meta.xml
<CustomField>
    <fullName>OS_Search_Completed_Datetime__c</fullName>
    <label>OS Search Completed Datetime</label>
    <type>DateTime</type>
</CustomField>