force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_Thoroughfare__c.field-meta.xml
<CustomField>
    <fullName>OS_Thoroughfare__c</fullName>
    <label>OS Thoroughfare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>