force-app/main/default/objects/OS_Candidate_Address__c/fields/OS_UPRN__c.field-meta.xml
<CustomField>
    <fullName>OS_UPRN__c</fullName>
    <label>OS UPRN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>