force-app/main/default/objects/OS_Candidate_Address__c/fields/Parent_Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Parent_Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>OS Candidate Addresses</relationshipLabel>
    <relationshipName>OS_Candidate_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>