force-app/main/default/objects/OS_Candidate_Address__c/fields/Potential_EPC_Rating__c.field-meta.xml
<CustomField>
    <fullName>Potential_EPC_Rating__c</fullName>
    <label>Potential EPC Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>