force-app/main/default/objects/OS_Candidate_Address__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Search</fullName>
            </value>
            <value>
                <fullName>Search in Progress</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Address Matched</fullName>
            </value>
            <value>
                <fullName>Search Failed</fullName>
            </value>
            <value>
                <fullName>Address Rejected</fullName>
            </value>
            <value>
                <fullName>Trustmark Matched</fullName>
            </value>
            <value>
                <fullName>Redundant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>