force-app/main/default/objects/OS_Candidate_Address__c/fields/Total_Floor_Area_EPC__c.field-meta.xml
<CustomField>
    <fullName>Total_Floor_Area_EPC__c</fullName>
    <label>Total Floor Area (EPC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>