force-app/main/default/objects/OS_Candidate_Address__c/fields/Triggered_Funding_Property_Detail__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Funding_Property_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggered Funding Property Detail</label>
    <referenceTo>FundingPropertyDetail__c</referenceTo>
    <relationshipLabel>OS Candidate Addresses</relationshipLabel>
    <relationshipName>OS_Candidate_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>