force-app/main/default/objects/OS_Candidate_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Parent_Funding_Award__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Address_Search_String__c</columns>
    <columns>Status__c</columns>
    <columns>API_Call_Status__c</columns>
    <columns>OS_Match_Result__c</columns>
    <columns>OS_Address__c</columns>
    <columns>OS_UPRN__c</columns>
    <columns>Current_EPC_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>