force-app/main/default/objects/OS_Candidate_Address__c/listViews/Search_In_Progress.listView-meta.xml
<ListView>
    <fullName>Search_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Address_Search_String__c</columns>
    <columns>Status__c</columns>
    <columns>API_Call_Status__c</columns>
    <columns>OS_Match_Result__c</columns>
    <columns>OS_Address__c</columns>
    <columns>OS_UPRN__c</columns>
    <columns>Current_EPC_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Search in Progress</value>
    </filters>
    <label>Search In Progress</label>
</ListView>